--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-python-telegram-bot>=20
+telethon>=1.34
 discord.py>=2.3
+slack-sdk>=3.23.0
+websockets>=10.0
 python-dotenv>=1.0
 fastapi>=0.111
 uvicorn[standard]>=0.30
@@ -7,3 +9,4 @@ motor>=3.4.0
 pymongo
 requests
 pydantic~=2.11.9
+aiohttp>=3.8.0
